--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="todo-container">
         <header>
-            <h1>ToDo Avançado</h1>
+            <h1>Todo Avançado</h1>
         </header>
         <form id="todo-form">
             <p>Adicione a sua tarefa: </p>
